fix collapse accordian

--- a/apps/frontend/src/client/app/pages/content/package-creation/container-choice/container-choice.component.scss
+++ b/apps/frontend/src/client/app/pages/content/package-creation/container-choice/container-choice.component.scss
@@ -16,3 +16,7 @@
 .panel-title {
   font-size: 13px;
 }
+
+.config-card {
+  min-height: 230px;
+}
